@@ -10,6 +10,8 @@ var Modal = React.createClass({
   propTypes: {
     onExit: PropTypes.func.isRequired,
     alert: PropTypes.bool,
+    dialogClass: PropTypes.string,
+    dialogId: PropTypes.string,
     focusDialog: PropTypes.bool,
     initialFocus: PropTypes.string,
     onEnter: PropTypes.func,
@@ -23,6 +25,7 @@ var Modal = React.createClass({
 
   getDefaultProps: function() {
     return {
+      dialogId: 'react-aria-modal-dialog',
       underlayClickExits: true,
       underlayColor: 'rgba(0,0,0,0.5)',
     };
@@ -89,7 +92,8 @@ var Modal = React.createClass({
     var dialogProps = {
       ref: 'dialog',
       role: (this.props.alert) ? 'alertdialog' : 'dialog',
-      id: 'react-aria-modal-dialog',
+      id: this.props.dialogId,
+      className: this.props.dialogClass,
       style: {
         position: 'absolute',
         left: '50%',
