@@ -1,5 +1,9 @@
 # Changelog
 
+## Head
+
+- Add `dialogId` and `dialogClass` props.
+
 ## 1.0.4
 
 - Add `max-width: 100%` to dialog element.
